--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
     h2 Guide
     p.
         you can pass a string as a parameter and the it will check to see
-        weather that string contains either unix timestamp or a natural
+        whether that string contains either unix timestamp or a natural
         language date, eg. January 1, 2017. It will return a json object.
     h2 Example usage
     p
